# sql-judge-utils

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  pyproject.toml  setup.py
sql_judge_utils/: database.py  mysql.py  parser.py  postgresql.py  validator.py
tests/: __init__.py  test_db_mysql.py  test_db_postgresql.py  test_parser.py  tests_database.py  tests_parser.py
tests/test_resources/: initial_100340.sql  solution_17906.sql
